# Screen4Stream

./: CMakeLists.txt
QmlWindow/: CMakeLists.txt  Frame.cpp  Frame.h  UdpSocketCustom.cpp  UdpSocketCustom.h  framerenderer.cpp  framerenderer.h  main.cpp  main.qml  screenrecordercustom.cpp  screenrecordercustom.h
ScreenCap/: CMakeLists.txt  ErrorException.cpp  ErrorException.h  ScreenCap.cpp  ScreenCap.h
